# MCE

./: .gitignore  MCE.desktop  README.md  pyproject.toml
mce/: MCE.ui  __init__.py  __main__.py
