[tool.poetry]
name = "mce"
version = "0.2.0"
description = "Metro 2033 Config Editor"
authors = ["Michael John <michael.john@gmx.at>"]
readme = "README.md"
license = "GPL"
include = ["CHANGELOG.md", "README.md", "MCE.ui", "mce.png"]

[tool.poetry.scripts]
mce = 'mce.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# pyside6 = "^6.4.2"
# pyside6 = ">=6.2"
# pyside6 = "^6.2.4"
pyside6-essentials = "^6.5.2"
vdf = "^3.4"

[tool.poetry.dev-dependencies]
# pyside6 = "^6.4.2"
pyside6 = "^6.2.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/MCE"
repository = "https://github.com/amstelchen/MCE"
documentation = "https://github.com/amstelchen/MCE"
